fix(readme): 修改说明